# Course_Work_5_PostgresSQL

./: README.md  config_root.py  pyproject.toml
data/: companies_id.json
src/: db_manager.py  get_vacancies.py  utils.py
