[tool.poetry]
name = "hh-postgressql"
version = "0.1.0"
description = ""
authors = ["dchumak <dchvgithub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
